Add some more simple tests

--- a/templates/default/table.erb
+++ b/templates/default/table.erb
@@ -1,3 +1,4 @@
+# This file is managed by Chef for <%= node['fqdn'] %>
 <% @content.each do |from, to| %>
 <%= from %>: <%= to %>
 <% end unless @content.nil? %>
