--- a/templates/default/upstart.erb
+++ b/templates/default/upstart.erb
@@ -8,6 +8,7 @@ description     "opensmtpd"
 start on filesystem or runlevel [2345]
 stop on runlevel [!2345]
 
+expect fork
 respawn
 respawn limit 5 30
 umask 0077
